--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   json_annotation: "^0.2.9"
   intl: "^0.15.7"
 dev_dependencies:
-  build_runner: "^0.8.0"
+  build_runner: "^0.9.0"
   json_serializable: "^0.5.8"
+sdk: '>=2.0.0-dev.54 <3.0.0'
 publish_to: "none"
