--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,21 @@
 name: "telegram"
-version: "0.0.6"
+version: "0.0.7"
 description: "Telegram Bot API wrapper for Dart"
 author: "Sungjin Han <meinside@gmail.com>"
+
+environment:
+  sdk: '>=2.0.0-dev.54 <3.0.0'
+
 dependencies:
   crypto: "^2.0.6"
   uuid: "^1.0.1"
-  http: "^0.11.3+17"
+  http: "^0.11.3"
   json_serializable: "^1.0.0"
   json_annotation: "^1.0.0"
   intl: "^0.15.7"
+
 dev_dependencies:
   build_runner: "^0.10.0"
   json_serializable: "^1.0.0"
-sdk: '>=2.0.0-dev.54 <3.0.0'
+
 publish_to: "none"
