--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: "telegram"
-version: "0.0.10"
+version: "0.0.11"
 description: "Telegram Bot API wrapper for Dart"
 author: "Sungjin Han <meinside@gmail.com>"
 
 environment:
-  sdk: '>=2.0.0-dev.54 <3.0.0'
+  sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
   crypto: "^2.0.6"
   uuid: "^2.0.1"
   http: "^0.12.0"
-  json_serializable: "^2.2.0"
-  json_annotation: "^2.2.0"
+  json_serializable: "^3.1.0"
+  json_annotation: "^2.4.0"
   intl: "^0.15.8"
 
 dev_dependencies:
